fixed text align

--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -194,7 +194,7 @@ div.menuitem4svg p {
 @media (min-width: 576px){
 
 img {
-	text-align: middle;  
+	  
 	height:20%;
 	width: 20%;
 }	   
